Add DynamoDB VPC Endpoint for new VPC stack

--- a/stacks/shared-vpc/gateway-endpoints.yml
+++ b/stacks/shared-vpc/gateway-endpoints.yml
@@ -19,3 +19,13 @@ Resources:
       ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
       VpcEndpointType: Gateway
       VpcId: !Ref VpcId
+
+  DynamoDbEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      RouteTableIds:
+        - !Ref PublicRouteTableId
+        - !Ref PrivateRouteTableId
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
+      VpcEndpointType: Gateway
+      VpcId: !Ref VpcId
