Clean up template

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -116,69 +116,79 @@ Resources:
           Type: CNAME
           Name: !Sub lihvrd6fmhem.metrics.${Domain}
   DotTech:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Public-facing domains for apps managed on .tech
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - Type: A
-          Name: !Ref Domain
-          AliasTarget:
+        # Apex domain
+        - AliasTarget:
             DNSName: d1txozk2299k6z.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
           Name: !Ref Domain
-          AliasTarget:
+          Type: A
+        - AliasTarget:
             DNSName: d1txozk2299k6z.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+          Name: !Ref Domain
+          Type: AAAA
 
-        - ResourceRecords:
+        # Augury
+        - Name: !Sub augury.${Domain}
+          ResourceRecords:
+            - augury.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # Backsaw
+        - Name: !Sub backsaw.${Domain}
+          ResourceRecords:
+            - backsaw.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # Feeder
+        - Name: !Sub feeder.${Domain}
+          ResourceRecords:
+            - feeder.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # ID
+        - Name: !Sub id.${Domain}
+          ResourceRecords:
+            - id.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # Metrics
+        - Name: !Sub metrics.${Domain}
+          ResourceRecords:
+            - metrics.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # Play
+        - Name: !Sub play.${Domain}
+          ResourceRecords:
+            - play.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # Publish
+        - Name: !Sub publish.${Domain}
+          ResourceRecords:
+            - publish.prx.tech.
+          TTL: "300"
+          Type: CNAME
+
+        # WWW
+        - Name: !Sub www.${Domain}
+          ResourceRecords:
             # - proxy.prx.tech.
             - d1txozk2299k6z.cloudfront.net.
           TTL: "300"
           Type: CNAME
-          Name: !Sub www.${Domain}
-
-        - ResourceRecords:
-            - backsaw.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub backsaw.${Domain}
-        - ResourceRecords:
-            - crier.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub crier.${Domain}
-        - ResourceRecords:
-            - play.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub play.${Domain}
-        - ResourceRecords:
-            - publish.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub publish.${Domain}
-        - ResourceRecords:
-            - feeder.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub feeder.${Domain}
-        - ResourceRecords:
-            - id.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub id.${Domain}
-        - ResourceRecords:
-            - metrics.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub metrics.${Domain}
-        - ResourceRecords:
-            - augury.prx.tech.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub augury.${Domain}
   PrxDotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
