--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -131,7 +131,8 @@ Resources:
   # The vanity ALB domain provides direct access to the ALB created in this
   # template. It's essentially an alternative to the xxxx.elb.amazonaws.com
   # domain provided with each ALB, but lives at a PRX-owned domain and includes
-  # some context clues, like the environment type.
+  # some context clues, like the environment type. It's not used as part of any
+  # DNS strategies; it doesn't really need to exist.
   VanityAlbDomainRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
