Pass in kinesis/redis params

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -98,6 +98,9 @@ Resources:
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+        DovetailRedisHostname: !Ref DovetailRedisHostname
+        DynamoDbKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM
+        MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM
         # For legacy stack
         DovetailLegacyEcrImageTag: !Ref DovetailLegacyEcrImageTag
         DovetailLegacySecretsVersion: !Ref DovetailLegacySecretsVersion
