Autoscale dovetail-router

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -12,6 +12,7 @@ Parameters:
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
+  EcsClusterName: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
@@ -84,6 +85,7 @@ Resources:
         - !Ref CloudFormationNotificationArn
       Parameters:
         EcsClusterArn: !Ref EcsClusterArn
+        EcsClusterName: !Ref EcsClusterName
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref DovetailRouterEcrImageTag
