--- a/stacks/apps/dovetail-legacy.yml
+++ b/stacks/apps/dovetail-legacy.yml
@@ -25,6 +25,8 @@ Parameters:
   AlbLoadBalancerFullName: { Type: String }
   AlbHttpListenerArn: { Type: String }
   AlbHttpsListenerArn: { Type: String }
+  MetricsKinesisStreamArn: { Type: String }
+  DynamoDbKinesisStreamArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -276,3 +278,82 @@ Resources:
         - MetricName: !Sub Errors${EnvironmentType}
           MetricNamespace: PRX/DovetailLegacy
           MetricValue: "1"
+
+  # log alarms
+  LogWarnsAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub WARN [Dovetail-V2] Web server <${EnvironmentTypeAbbreviation}> LOGGING WARNS
+      AlarmDescription: !Sub ${EnvironmentType} Dovetail V2's Restify server logging warnings
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: 3
+      MetricName: !Sub Warns${EnvironmentType}
+      Namespace: PRX/DovetailLegacy
+      Period: 60
+      Statistic: Sum
+      Threshold: 200
+      TreatMissingData: notBreaching
+  LogErrorsAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ERROR [Dovetail-V2] Web server <${EnvironmentTypeAbbreviation}> LOGGING ERRORS
+      AlarmDescription: !Sub ${EnvironmentType} Dovetail V2's Restify server logging errors
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: 1
+      MetricName: !Sub Errors${EnvironmentType}
+      Namespace: PRX/DovetailLegacy
+      Period: 60
+      Statistic: Sum
+      Threshold: 0
+      TreatMissingData: notBreaching
+
+  # subscription filter (send logged impression data to kinesis)
+  SubscriptionFilterRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - !Sub logs.${AWS::Region}.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+      Policies:
+        - PolicyName: DovetailLegacySubscriptionFilterPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - kinesis:DescribeStream
+                  - kinesis:PutRecord
+                  - kinesis:PutRecords
+                Resource:
+                  - !Ref MetricsKinesisStreamArn
+                  - !Ref DynamoDbKinesisStreamArn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Node.js }
+  # pre-IAB2 impressions
+  MetricsSubscriptionFilter:
+    Type: AWS::Logs::SubscriptionFilter
+    Properties:
+      DestinationArn: !Ref MetricsKinesisStreamArn
+      FilterPattern: '{ $.msg = "impression" }'
+      LogGroupName: !Ref TaskLogGroup
+      RoleArn: !GetAtt SubscriptionFilterRole.Arn
+  # IAB2 impressions
+  DynamodbSubscriptionFilter:
+    Type: AWS::Logs::SubscriptionFilter
+    Properties:
+      DestinationArn: !Ref DynamoDbKinesisStreamArn
+      FilterPattern: '{ $.msg = "impressionbytes" }'
+      LogGroupName: !Ref TaskLogGroup
+      RoleArn: !GetAtt SubscriptionFilterRole.Arn
