--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -798,6 +798,7 @@ Resources:
         - !Ref CloudFormationNotificationArn
       Parameters:
         EcsClusterArn: !Ref EcsClusterArn
+        EcsClusterName: !Ref EcsClusterName
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref DovetailLegacyEcrImageTag
