Disable listener rules

--- a/stacks/apps/dovetail-legacy.yml
+++ b/stacks/apps/dovetail-legacy.yml
@@ -39,30 +39,30 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
-  HttpHostHeaderListenerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref TargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - dovetail.*
-      ListenerArn: !Ref AlbHttpListenerArn
-      Priority: 100
-  HttpsHostHeaderListenerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref TargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - dovetail.*
-      ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 100
+  # HttpHostHeaderListenerRule:
+  #   Type: AWS::ElasticLoadBalancingV2::ListenerRule
+  #   Properties:
+  #     Actions:
+  #       - TargetGroupArn: !Ref TargetGroup
+  #         Type: forward
+  #     Conditions:
+  #       - Field: host-header
+  #         Values:
+  #           - dovetail.*
+  #     ListenerArn: !Ref AlbHttpListenerArn
+  #     Priority: 100
+  # HttpsHostHeaderListenerRule:
+  #   Type: AWS::ElasticLoadBalancingV2::ListenerRule
+  #   Properties:
+  #     Actions:
+  #       - TargetGroupArn: !Ref TargetGroup
+  #         Type: forward
+  #     Conditions:
+  #       - Field: host-header
+  #         Values:
+  #           - dovetail.*
+  #     ListenerArn: !Ref AlbHttpsListenerArn
+  #     Priority: 100
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
