--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -35,6 +35,7 @@ Resources:
         # Sample record set pair
         # - { Type: A,    Name: !Sub "TKTKTKTK.${Domain}", AliasTarget: { DNSName: "dTKTKTKTKTK.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         # - { Type: AAAA, Name: !Sub "TKTKTKTK.${Domain}", AliasTarget: { DNSName: "dTKTKTKTKTK.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
         # Add more records here…
         - { Type: A, Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
@@ -172,3 +173,7 @@ Resources:
         # Spooked
         - { Type: A, Name: !Sub "pf9317spkd.${Domain}", AliasTarget: { DNSName: "d3r6tzejjb4wb.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9317spkd.${Domain}", AliasTarget: { DNSName: "d3r6tzejjb4wb.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Milky Way Underground
+        - { Type: A, Name: !Sub "pf2213mwug.${Domain}", AliasTarget: { DNSName: "dfo3of5h5hu0t.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf2213mwug.${Domain}", AliasTarget: { DNSName: "dfo3of5h5hu0t.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
